  instead.
* Title::isDeleted() and Title::isDeletedQuick() have been deprecated. Please
  use Title::getDeletedEditsCount() and Title::hasDeletedEdits() instead.
* Article::getContentObject, soft-deprecated since 1.32, was hard-deprecated.
* WikiRevision::importUpload, soft-deprecated since 1.31, was hard-deprecated.
* Html::infoBox() has been deprecated. There's no replacement.
* BagOStuff::makeKeyInternal() usage outside of BagOStuff has been deprecated.
* BagOStuff::setDebug() is deprecated and calls to it are ignored. Debug logs
  are now unconditionally enabled.
* The following global functions have been hard deprecated:
   - wfAppendToArrayIfNotDefault
   - wfAcceptToPrefs
   - wfClearOutputBuffers
   - wfConfiguredReadOnlyReason
   - wfDebugMem
   - wfGetPrecompiledData
   - wfNegotiateType
* BeforeParserFetchTemplateAndtitleHook has been deprecated; replace
  with the new BeforeParserFetchTemplateRevisionRecord hook. (The
  similar ParserFetchTemplateHook was deprecated in 1.35; the new hook
  replaces both.)
* The InterwikiLoadPrefix hook has been deprecated; it is not compatible
  with future wikitext parsers (which need to enumerate all interwiki
  prefixes). In test cases please use $wgInterwikiCache instead.
* WikiPage instances should no longer be constructed for titles that do not
  represent editable pages (e.g. special pages). WikiPages were always
  documented to represent "MediaWiki article and history".
* Skin::getSkinStylePath() has been deprecated. Please replace usages with
  the direct path to the resources.
* The second argument of EnhancedChangesList::getDiffHistLinks, $query, has
  been deprecated.
* The ParserTestTables hook has been deprecated; it is no longer necessary
  after a ParserTestRunner refactoring.
* The following classes have been hard deprecated: CachedAction,
  SpecialCachedPage, CacheHelper, ICacheHelper. They were unused in MediaWiki
  ecosystem, so no replacement was provided.