@@ -313,9 +313,15 @@ class MessageTest extends MediaWikiLangTestCase {
 	public function testToString( $key, $format, $expect, $expectImplicit ) {
 		$msg = new Message( $key );
 		$this->assertSame( $expect, $msg->$format() );
-		$this->assertSame( $expect, $msg->toString(), 'toString is unaffected by previous call' );
-		$this->assertSame( $expectImplicit, $msg->__toString() );
-		$this->assertSame( $expect, $msg->toString(), 'toString is unaffected by __toString' );
+
+		// This statefulness is deprecated (T146416)
+		$this->hideDeprecated( 'Message::toString with implicit format' );
+		$this->assertSame( $expect, $msg->toString(), 'toString is affected by format call' );
+
+		// This used to behave the same as toString() and was a security risk.
+		// It now has a stable return value that is always parsed/sanitized. (T146416)
+		$this->assertSame( $expectImplicit, $msg->__toString(), '__toString is not affected by format call' );
+		$this->assertSame( $expect, $msg->toString(), 'toString is not affected by __toString' );
 	}
 
 	public static function provideToString_raw() {
@@ -345,10 +351,14 @@ class MessageTest extends MediaWikiLangTestCase {
 			->getMock();
 		$msg->expects( $this->any() )->method( 'fetchMessage' )->willReturn( $message );
 		/** @var Message $msg */
+
 		$this->assertSame( $expect, $msg->$format() );
-		$this->assertSame( $expect, $msg->toString(), 'toString is unaffected by previous call' );
+
+		$this->hideDeprecated( 'Message::toString with implicit format' );
+		$this->assertSame( $expect, $msg->toString(), 'toString is affected by format call' );
+
 		$this->assertSame( $expectImplicit, $msg->__toString() );
-		$this->assertSame( $expect, $msg->toString(), 'toString is unaffected by __toString' );
+		$this->assertSame( $expect, $msg->toString(), 'toString is not naffected by __toString' );
 	}
 
 	/**
